--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "parcel build index.html",
     "dev": "parcel index.html --open",
     "start": "npm run build && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "devDependencies": {
+    "husky": "^8.0.1",
     "parcel-bundler": "^1.12.4"
   }
 }
