--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "dev": "parcel index.html --open",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "eslint": "eslint *.html"
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-plugin-html": "^7.1.0",
     "husky": "^8.0.1",
     "parcel-bundler": "^1.12.4"
   }
